---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type {}

@cT = unnamed_addr constant i32 1000
@cT_SHORT = unnamed_addr constant i32 1000
@cLT = unnamed_addr constant i64 1000000000000
@cLT_SHORT = unnamed_addr constant i64 1000000000000
@cD = unnamed_addr constant i32 0
@cD_SHORT = unnamed_addr constant i32 161308800
@cLD = unnamed_addr constant i64 161308800000000000
@cLD_SHORT = unnamed_addr constant i64 161308800000000000
@cTOD = unnamed_addr constant i32 0
@cTOD_SHORT = unnamed_addr constant i32 0
@cLTOD = unnamed_addr constant i64 86399999999999
@cLTOD_SHORT = unnamed_addr constant i64 86399999999999
@cDT = unnamed_addr constant i32 172799
@cDT_SHORT = unnamed_addr constant i32 172799
@cLDT = unnamed_addr constant i64 172799123000000
@cLDT_SHORT = unnamed_addr constant i64 172799123000000
@main_instance = global %main zeroinitializer

define void @main(ptr %0) {
entry:
  %t1 = alloca i32, align [filtered]
  %t2 = alloca i32, align [filtered]
  %lt1 = alloca i64, align [filtered]
  %lt2 = alloca i64, align [filtered]
  %d1 = alloca i32, align [filtered]
  %d2 = alloca i32, align [filtered]
  %ld1 = alloca i64, align [filtered]
  %ld2 = alloca i64, align [filtered]
  %tod1 = alloca i32, align [filtered]
  %tod2 = alloca i32, align [filtered]
  %ltod1 = alloca i64, align [filtered]
  %ltod2 = alloca i64, align [filtered]
  %dt1 = alloca i32, align [filtered]
  %dt2 = alloca i32, align [filtered]
  %ldt1 = alloca i64, align [filtered]
  %ldt2 = alloca i64, align [filtered]
  store i32 0, ptr %t1, align [filtered]
  store i32 0, ptr %t2, align [filtered]
  store i64 0, ptr %lt1, align [filtered]
  store i64 0, ptr %lt2, align [filtered]
  store i32 0, ptr %d1, align [filtered]
  store i32 0, ptr %d2, align [filtered]
  store i64 0, ptr %ld1, align [filtered]
  store i64 0, ptr %ld2, align [filtered]
  store i32 0, ptr %tod1, align [filtered]
  store i32 0, ptr %tod2, align [filtered]
  store i64 0, ptr %ltod1, align [filtered]
  store i64 0, ptr %ltod2, align [filtered]
  store i32 0, ptr %dt1, align [filtered]
  store i32 0, ptr %dt2, align [filtered]
  store i64 0, ptr %ldt1, align [filtered]
  store i64 0, ptr %ldt2, align [filtered]
  store i32 1000, ptr %t1, align [filtered]
  store i32 1000, ptr %t2, align [filtered]
  store i64 1000000000000, ptr %lt1, align [filtered]
  store i64 1000000000000, ptr %lt2, align [filtered]
  store i32 0, ptr %d1, align [filtered]
  store i32 161308800, ptr %d2, align [filtered]
  store i64 161308800000000000, ptr %ld1, align [filtered]
  store i64 161308800000000000, ptr %ld2, align [filtered]
  store i32 0, ptr %tod1, align [filtered]
  store i32 0, ptr %tod2, align [filtered]
  store i64 86399999999999, ptr %ltod1, align [filtered]
  store i64 86399999999999, ptr %ltod2, align [filtered]
  store i32 172799, ptr %dt1, align [filtered]
  store i32 172799, ptr %dt2, align [filtered]
  store i64 172799123000000, ptr %ldt1, align [filtered]
  store i64 172799123000000, ptr %ldt2, align [filtered]
  ret void
}
